add spring boot layer and optimize dockerfile

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -184,6 +184,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
+                </configuration>
             </plugin>
             <!--  assembly 打压缩包插件 -->
             <!--<plugin>
