--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,5 +22,10 @@
             <groupId>com.ch</groupId>
             <artifactId>ch-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
