--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.alibaba.cloud</groupId>
-        <artifactId>spring-cloud-alibaba</artifactId>
-        <version>2021.0.1.0</version>
+        <groupId>com.ch.cloud</groupId>
+        <artifactId>ch-cloud</artifactId>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.ch.cloud</groupId>
     <artifactId>ch-devops</artifactId>
@@ -43,18 +43,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2021.0.1</version>
+                <groupId>com.ch.cloud</groupId>
+                <artifactId>ch-cloud-dependencies</artifactId>
+                <version>${ch.cloud.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2021.0.1.0</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.ch.cloud</groupId>
