--- a/web/src/main/resources/config/application-local.properties
+++ b/web/src/main/resources/config/application-local.properties
@@ -15,3 +15,9 @@ mybatis.type-aliases-package=com.ch.cloud.devops.dto
 mybatis.configuration.map-underscore-to-camel-case=true
 mapper.enum-as-simple-type=true
 #mybatis.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
+
+
+springfox.documentation.enabled=true
+springfox.documentation.open-api.enabled=true
+springfox.swagger.app=CH DEVOPS
+springfox.swagger.version=2.0.0
