--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.ch.cloud</groupId>
             <artifactId>ch-upms-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
