--- a/service/pom.xml
+++ b/service/pom.xml
@@ -28,6 +28,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <!-- Caffeine缓存库 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.9.3</version> <!-- 使用时请检查最新版本 -->
+        </dependency>
         <dependency>
             <groupId>com.ch.cloud</groupId>
             <artifactId>ch-upms-client</artifactId>
