feat(devops): 重构命名空间申请流程并支持权限配置
- 新增 NamespaceApplyDto 类用于命名空间申请信息传输
- 修改命名空间申请接口，支持批量申请和权限配置
- 更新数据库操作，增加权限字段
- 移除 Springfox 相关配置，改为使用 springdoc-openapi-ui
- 调整 pom.xml 依赖，移除 RocketMQ 相关依赖

--- a/web/src/main/resources/config/application-local.yml
+++ b/web/src/main/resources/config/application-local.yml
@@ -60,3 +60,13 @@ mybatis:
     map-underscore-to-camel-case: true #开启驼峰功能
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #sql控制台打印
 #  configuration-properties: { dbSchema: *.* } #配置数据库的模式
+
+
+springdoc:
+  swagger-ui:
+    enabled: true
+  #    path: /swagger-ui/index.html  # 默认路径，可自定义
+  api-docs:
+    path: /v3/api-docs      # OpenAPI JSON 端点
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
