--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <java_target_version>17</java_target_version>
         <file_encoding>UTF-8</file_encoding>
         <ch.cloud.version>2.0.2.1-SNAPSHOT</ch.cloud.version>
+        <ch.upms.version>1.1.1-SNAPSHOT</ch.upms.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.ch.cloud</groupId>
+                <artifactId>ch-upms-client</artifactId>
+                <version>${ch.upms.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.ch.cloud</groupId>
                 <artifactId>ch-cloud-dependencies</artifactId>
