build(web): 修改 Dockerfile 中的 JAR 文件名
- 将 ARG JAR_FILE 的值从 ./ch-devops-*.jar 修改为 ./app.jar
- 这个修改简化了 JAR 文件的指定，提高了构建的灵活性和可读性

--- a/web/src/main/docker/Dockerfile
+++ b/web/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8-alpine as builder
 WORKDIR application
-ARG JAR_FILE=./ch-devops-*.jar
+ARG JAR_FILE=./app.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
